changed user websocket connection url

--- a/AirQualitySystemWeb/conf/application.conf
+++ b/AirQualitySystemWeb/conf/application.conf
@@ -16,7 +16,7 @@ akka {
 # https://www.playframework.com/documentation/latest/SecurityHeaders
 # Connect to localhost:9000 for content security policy on websockets
 play.filters.headers {
-  contentSecurityPolicy = "connect-src 'self' ws://localhost:9000/socket"
+  contentSecurityPolicy = "connect-src 'self' ws://localhost:9000/client"
 
 }
 
