changed configurations and libraryDependencies

--- a/AirQualitySystemWeb/conf/application.conf
+++ b/AirQualitySystemWeb/conf/application.conf
@@ -26,11 +26,13 @@ play.filters.hosts {
   allowed = ["localhost:9000","localhost:3306", "192.168.1.120:9000"]
 
 }
-db{
-  default.driver=com.mysql.jdbc.Driver
-  default.url="jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false"
-  default.username=root
-  default.password=""
+slick.dbs{
+  default.driver = "slick.driver.MySQLDriver$"
+  default.db.driver = "com.mysql.jdbc.Driver"
+  default.db.url = "jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false"
+  default.db.user = "root"
+  default.db.password = ""
+
 }
 fixedConnectionPool = 9
 
