fixed interaction with slick database

--- a/AirQualitySystemWeb/conf/application.conf
+++ b/AirQualitySystemWeb/conf/application.conf
@@ -11,12 +11,13 @@ akka {
     }
   }
 }
-
+//module.spring=${play.path}/modules/springZ
+//play.evolutions.autoApplyDowns=false
 //play.filters.enabled += play.filters.hosts.AllowedHostsFilter
 # https://www.playframework.com/documentation/latest/SecurityHeaders
 # Connect to localhost:9000 for content security policy on websockets
 play.filters.headers {
-  //contentSecurityPolicy = "connect-src 'self' ws://localhost:9000/client"
+  #contentSecurityPolicy = "connect-src 'self' ws://localhost:9000/client"
 
 }
 
@@ -26,14 +27,21 @@ play.filters.hosts {
   allowed = ["localhost:9000","localhost:3306", "192.168.1.120:9000"]
 
 }
-slick.dbs{
-  default.driver = "slick.driver.MySQLDriver$"
-  default.db.driver = "com.mysql.jdbc.Driver"
-  default.db.url = "jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false"
-  default.db.user = "root"
-  default.db.password = ""
 
-}
+//db{
+//  default.driver=com.mysql.jdbc.Driver
+//  default.url="jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false"
+//  default.username=root
+//  default.password=""
+//}
+
+slick.dbs.default.driver = "slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false"
+slick.dbs.default.db.user = "root"
+slick.dbs.default.db.password = ""
+
+
 fixedConnectionPool = 9
 
 database.dispatcher {
