--- a/AirQualitySystemWeb/conf/application.conf
+++ b/AirQualitySystemWeb/conf/application.conf
@@ -36,7 +36,7 @@ play.filters.hosts {
 //}
 
 slick.dbs.default.driver = "slick.driver.MySQLDriver$"
-slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.profile = "com.mysql.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false"
 slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = ""
